添加SmartMeta模块，实施智能元数据战略